Lagd endepunkt for aa hente alle orgs for brukerid